refactor MockGeoPropertiesService and PropertiesGeoSearchController to enhance property filtering and address search functionality